--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@unform/web": "^2.1.6",
     "aws-amplify": "^4.2.3",
     "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "framer-motion": "^4",
     "next": "11.0.1",
     "react": "17.0.2",
@@ -33,7 +34,6 @@
   "devDependencies": {
     "@types/node": "^16.0.1",
     "@types/react": "^17.0.14",
-    "@types/react-router-dom": "^5.1.8",
     "@types/react-select": "^4.0.17",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
